refactor: update input group for name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Cadastro</string>
-    <string name="cadastro">Cadastro</string>
     <string name="nome_completo">Nome Completo</string>
+    <string name="digite_seu_nome">digite seu nome</string>
 </resources>
