--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Cadastro</string>
     <string name="nome_completo">Nome Completo</string>
-    <string name="digite_seu_nome">digite seu nome</string>
     <string name="telefone">Telefone</string>
-    <string name="digite_seu_telefone">digite seu telefone</string>
+    <string name="ex_12_93456_7890">Ex: 12-93456-7890</string>
 </resources>
