feat: create input group for email

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="nome_completo">Nome Completo</string>
     <string name="telefone">Telefone</string>
     <string name="ex_12_93456_7890">Ex: 12-93456-7890</string>
+    <string name="e_mail">E-mail</string>
 </resources>
