--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="telefone">Telefone</string>
     <string name="ex_12_93456_7890">Ex: 12-93456-7890</string>
     <string name="e_mail">E-mail</string>
+    <string name="ingressar_na_lista_de_e_mails">Ingressar na lista de e-mails?</string>
 </resources>
