--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="sexo">Sexo</string>
     <string name="masculino">Masculino</string>
     <string name="feminino">Feminino</string>
+    <string name="cidade">Cidade</string>
 </resources>
